shortens text in jumbotron

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,7 +15,7 @@
     </nav>
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-4">freeCodeCamp Solution Downloader</h1>
+        <h1 class="display-4">Solution Downloader</h1>
         <p class="lead">You can use this simple utility to dowload all of your code snippets from freeCodeCamp.</p>
         <hr class="my-4">
         <p>Enter your username in the field below, and your download link will be ready in a few seconds.</p>
