adds social buttons

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -34,6 +34,24 @@
             </div>
           </div>
         </form>
+        <p>If you found this tool useful, please star the repo on GitHub and consider following on Twitter for (mostly) developer and freeCodeCamp related tweets.</p>
+        <div class='d-flex justify-content-center'>
+          <iframe 
+            src="https://ghbtns.com/github-btn.html?user=jacksonbates&repo=fcc-scraper&type=star&count=true&size=large" 
+            frameborder="0" 
+            scrolling="0" 
+            width="160px" 
+            height="30px"
+          ></iframe>
+          <a 
+            href="https://twitter.com/JacksonBates?ref_src=twsrc%5Etfw" 
+            class="twitter-follow-button" 
+            data-show-count="true"
+            data-size="large"
+          >
+          Follow @JacksonBates
+          </a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
       </div>
     </div>
   </body>
