tweaking button placement

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,7 +15,7 @@
     </nav>
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-4">Solution Downloader</h1>
+        <h1 class="jumbotron__h1">Solution Downloader</h1>
         <p class="lead">You can use this simple utility to dowload all of your code snippets from freeCodeCamp.</p>
         <hr class="my-4">
         <p>Enter your username in the field below, and your download link will be ready in a few seconds.</p>
@@ -30,19 +30,12 @@
                 id="username"
                 placeholder="e.g. Camper"
               >
-              <button type="submit" class="btn btn-outline-success btn-block">Get Download Link</button>
+              <button type="submit" class="btn btn-download btn-block">Get Download Link</button>
             </div>
           </div>
         </form>
-        <p>If you found this tool useful, please star the repo on GitHub and consider following on Twitter for (mostly) developer and freeCodeCamp related tweets.</p>
-        <div class='d-flex justify-content-center'>
-          <iframe 
-            src="https://ghbtns.com/github-btn.html?user=jacksonbates&repo=fcc-scraper&type=star&count=true&size=large" 
-            frameborder="0" 
-            scrolling="0" 
-            width="160px" 
-            height="30px"
-          ></iframe>
+        <p>If you found this useful, please star the repo on GitHub and or on Twitter for developer and freeCodeCamp related tweets.</p>
+         <div class='d-flex align-content-between justify-content-center flex-wrap'> 
           <a 
             href="https://twitter.com/JacksonBates?ref_src=twsrc%5Etfw" 
             class="twitter-follow-button" 
@@ -51,6 +44,13 @@
           >
           Follow @JacksonBates
           </a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <iframe 
+            src="https://ghbtns.com/github-btn.html?user=jacksonbates&repo=fcc-scraper&type=star&count=true&size=large" 
+            frameborder="0" 
+            scrolling="0" 
+            width="160px" 
+            height="30px"
+          ></iframe>  
         </div>
       </div>
     </div>
