--- a/views/pages/bad.ejs
+++ b/views/pages/bad.ejs
@@ -1,3 +1,25 @@
-Bad.
-
-<a href='/'>Try again</a>.
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>freeCodeCamp Solutions Archiver | Download Campers</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name="description" content="Download an archive of your freeCodeCamp Solutions here.">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./style.css">
+  </head>
+  <body> 
+    <nav class="navbar navbar__bar">
+      <a class="navbar-brand navbar__font" href="/">freeCodeCamp <i class="fa fa-free-code-camp"></i></a>
+    </nav>
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="jumbotron__h1">Bummer!</h1>
+        <p class="lead">Something went wrong.</p>
+        <hr class="my-4">
+        <p>Please let me know what you were trying to do, and I'll try to figure out what went wrong. Either contact me via <a href="https://twitter.com/jacksonbates">Twitter</a>, the <a href="https://forum.freecodecamp.org/u/JacksonBates/">freeCodeCamp Fourm</a>, or open up a <a href="https://github.com/JacksonBates/fcc-scraper/issues">GitHub Issue</a>.</p>
+      </div>
+    </div>
+  </body>
+</html>
