--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'saxmonoregular';
+    src: url('saxmono-font/saxmono-webfont.eot');
+    src: url('saxmono-font/saxmono-webfont.eot?#iefix') format('embedded-opentype'),
+         url('saxmono-font/saxmono-webfont.woff') format('woff'),
+         url('saxmono-font/saxmono-webfont.ttf') format('truetype'),
+         url('saxmono-font/saxmono-webfont.svg#saxmonoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background-color: #E9ECEF;
 }
@@ -7,8 +18,10 @@ body {
 }
 
 .navbar__font {
+    font-family: saxmonoregular;
     font-size:1.5em;
 }
+
 .navbar__font:link, .navbar__font:visited, .navbar__font:hover, .navbar__font:active {
     color: #fff;
 } 
